examples/errors/to_many_arguments.jj
func f
with x, y, z


func main
{
    f(1, 2, 3, 4);
}